# geometric_algebra

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
build_scripts/cga3d/: Cargo.toml
build_scripts/cga3d/src/: main.rs
build_scripts/cga3d_faceted/: Cargo.toml
build_scripts/cga3d_faceted/src/: main.rs
cga3d/: Cargo.toml
cga3d/src/: aspect_duals.rs  aspects.rs  cga3d.glsl  cga3d.wgsl  characteristics.rs  involutions.rs  lib.rs  metrics.rs  norms.rs  shaders.rs  test.rs  unitize.rs
cga3d/src/products/: contractions.rs  dot.rs  expansions.rs  exterior.rs  geometric.rs  isometries.rs  projections.rs  quotients.rs  rejections.rs  supports.rs
cga3d/src/shaders/: cga3d.glsl  cga3d.wgsl
cga3d_min/: Cargo.toml
codegen/: Cargo.toml  build.rs
codegen/src/: algebra.rs  ast.rs  compile.rs  emit.rs  glsl.rs  impls.rs  lib.rs  main.rs  old_lib.rs  old_product.rs  rga3d.glsl  rga3d.rs  rga3d.wgsl  rust.rs  shader_support.rs  simd.rs  utility.rs  validate.rs  wgsl.rs
codegen/src/algebra/: basis_element.rs  conformal.rs  dialect.rs  mod.rs  multivector.rs  rigid.rs
codegen/src/algebra/basis/: arithmetic.rs  filter.rs  generators.rs  grades.rs  mod.rs  substitutes.rs
codegen/src/algebra/conformal/: tests.rs
codegen/src/algebra2/: algebra.rs  basis.rs  metric.rs  mod.rs  multivector.rs
codegen/src/algebra2/basis/: arithmetic.rs  filter.rs  generators.rs  grades.rs  mod.rs  substitute.rs  substitutes.rs
codegen/src/ast/: datatype.rs  expressions.rs  impls.rs  mod.rs  operations_tracker.rs  traits.rs
codegen/src/ast/expressions/: impl_debug.rs  impl_display.rs  impl_eq_ord.rs  impl_expression.rs  impl_from.rs  impl_operators.rs  impl_statistics.rs  misc_methods.rs  simplify.rs  transposition.rs
codegen/src/ast2/: basis.rs  datatype.rs  expressions.rs  impls.rs  mod.rs  operations_tracker.rs  playground.rs  traits.rs
codegen/src/build_scripts/: cga.rs  cga3d.rs  cga3d_min.rs  common_traits.rs  rga.rs  rga3d.rs
codegen/src/build_scripts/cga3d/: test.rs
codegen/src/build_scripts/common_traits/: conformal.rs
codegen/src/build_scripts/rga3d/: test.rs
codegen/src/build_scripts2/: cga3d.rs  common_traits.rs  pga3d.rs  rga3d.rs  uwu.rs  wip_traits.rs
codegen/src/build_scripts2/common_traits/: conformal.rs
codegen/src/debug_scripts/: cga3d_faceted.rs  pga3d.rs  rga3d.rs  uwu.rs
codegen/src/emit/: edsl.rs  glsl.rs  mod.rs  rust.rs  rust_on_gpu.rs  slang.rs  sql.rs  wesl.rs  wgsl.rs
codegen/src/emit2/: mod.rs  rust.rs  wgsl.rs
demos/: Cargo.toml
examples/: Cargo.toml
examples/broken_glsl/debug_glsl/: Cargo.toml
examples/broken_glsl/debug_glsl/src/: main.rs
examples/broken_glsl/hello_circle_glsl/: Cargo.toml
examples/broken_glsl/hello_circle_glsl/src/: main.rs
examples/build_shader_automatically/: Cargo.toml
examples/build_shader_automatically/res/: shader.fs.spv
examples/build_shader_manually/: Cargo.toml
examples/camera_and_instancing/: Cargo.toml
examples/camera_and_instancing/src/: main.rs
examples/compile_to_spirv/: Cargo.toml  build.rs
examples/compile_to_spirv/res/: shader.vs.spv
examples/compile_to_spirv/src/: main.rs
examples/debug_glsl/: Cargo.toml
examples/debug_glsl/src/: cga3d_min.glsl  main.rs  shader.frag.glsl  shader.vert.glsl
examples/hello_circle/: Cargo.toml
examples/hello_circle/src/: main.rs  shader.wgsl
examples/hello_circle_glsl/: Cargo.toml
examples/hello_circle_glsl/src/: main.rs  shader.frag.glsl  shader.vert.glsl
examples/hello_circle_rust/: Cargo.toml
examples/hello_circle_rust/src/: main.rs
examples/hello_circle_slang/hello_circle_slang/: Cargo.toml  build.rs
examples/hello_circle_slang/hello_circle_slang/res/: shader.fs.json  shader.fs.spv  shader.vs.json  shader.vs.spv
examples/hello_circle_slang/hello_circle_slang/src/: main.rs  shader.slang
examples/hello_circle_slang/hello_circle_slang_build/: Cargo.toml
examples/hello_circle_slang/hello_circle_slang_build/src/: lib.rs  main.rs
examples/hello_circle_wgsl/: Cargo.toml
examples/hello_circle_wgsl/hello_circle_wgsl/: Cargo.toml
examples/hello_circle_wgsl/hello_circle_wgsl/res/: shader.fs.spv  shader.vs.spv
examples/hello_circle_wgsl/hello_circle_wgsl/src/: main.rs  shader.wgsl
examples/hello_circle_wgsl/hello_circle_wgsl_build/: Cargo.toml
examples/hello_circle_wgsl/hello_circle_wgsl_build/src/: lib.rs  main.rs
examples/hello_circle_wgsl/src/: main.rs  shader.wgsl
examples/src/: main.rs
libraries/rga3d/: Cargo.toml  build.rs
libraries/rga3d/src/: data.rs  generated-files.txt  integrations.rs  lib.rs  simd.rs  traits.rs
libraries/rga3d/src/data/: anti_scalar.rs  dual_num.rs  flector.rs  horizon.rs  line.rs  motor.rs  multi_vector.rs  origin.rs  plane.rs  point.rs  scalar.rs
libraries/rga3d/src/data/impls/: anti_scalar.rs  dual_num.rs  flector.rs  horizon.rs  line.rs  motor.rs  multi_vector.rs  origin.rs  plane.rs  point.rs  scalar.rs
libraries/rga3d/src/integrations/: glsl.rs  rga3d.wgsl  wgsl.rs
libraries/rga3d/src/traits/: anti_auto_morphism.rs  anti_constraint_valid.rs  anti_constraint_violation.rs  anti_dot_product.rs  anti_fix.rs  anti_fix_impl.rs  anti_inverse.rs  anti_one.rs  anti_project_orthogonally_onto.rs  anti_reverse.rs  anti_sandwich.rs  anti_square_root.rs  anti_support.rs  auto_morphism.rs  bulk.rs  bulk_norm.rs  bulk_norm_squared.rs  conjugation.rs  constraint_valid.rs  constraint_violation.rs  dot_product.rs  double_complement.rs  fix.rs  flat_bulk.rs  flat_bulk_norm.rs  flat_bulk_norm_squared.rs  flat_weight.rs  flat_weight_norm.rs  flat_weight_norm_squared.rs  geometric_anti_quotient.rs  geometric_product.rs  geometric_quotient.rs  inverse.rs  left_complement.rs  norm.rs  norm_squared.rs  one.rs  project_via_origin_onto.rs  reject_via_origin_from.rs  reverse.rs  (+11 more)
old_libraries/rga3d/: Cargo.toml
old_libraries/rga3d/src/: aspect_duals.rs  aspects.rs  lib.rs  metrics.rs  shaders.rs  unitize.rs
old_libraries/rga3d/src/products/: expansions.rs  exterior.rs  quotients.rs
old_libraries/rga3d/src/shaders/: rga3d.wgsl
projective_ga/: Cargo.toml
projective_ga/src/: lib.rs  simd.rs
(+1522 files in other folders)
