[workspace]
resolver = "2"

members = [
    "codegen",

    "old_libraries/rga3d",
    "old_libraries/cga3d_min",

    "libraries/rga3d",
    "libraries/cga3d",
    "libraries/cga3d_faceted",

    "build_scripts/rga3d",
    "build_scripts/cga3d",
    "build_scripts/cga3d_faceted",

    "examples/hello_circle_wgsl/hello_circle_wgsl",
    "examples/hello_circle_wgsl/hello_circle_wgsl_build",
    "examples/hello_circle_rust",
    "examples/broken_glsl/hello_circle_glsl",
    "examples/broken_glsl/debug_glsl",
    "examples/camera_and_instancing",
]
