[workspace]
resolver = "2"

members = [
    "codegen",

    "libraries/rga3d",
    "libraries/cga3d",
    "libraries/cga3d_faceted",

    "build_scripts/rga3d",
    "build_scripts/cga3d",
    "build_scripts/cga3d_faceted",

    "examples/hello_circle_wgsl/hello_circle_wgsl",
    "examples/hello_circle_wgsl/hello_circle_wgsl_build",
    "examples/hello_circle_rust",
    "examples/hello_circle_slang/hello_circle_slang",
    "examples/hello_circle_slang/hello_circle_slang_build",
]
