[package]
name = "cga3d"
version = "0.3.0"
authors = ["Alexander Meißner <AlexanderMeissner@gmx.net>", "Andrew Brown <Andrew.Brown.UNL@gmail.com>"]
description = "Generate(d) custom libraries for geometric algebras"
repository = "https://github.com/AndrewBrownK/geometric_algebra/"
keywords = ["math", "simd", "vector", "geometric-algebra", "geometry"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
geometric_algebra = { path = "../geometric_algebra"}