[package]
name = "demos"
version = "0.1.0"
authors = ["Andrew Brown <Andrew.Brown.UNL@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#winit-main = "0.1.3"
winit = "0.30.0"
wgpu = "0.20.0"
