[package]
name = "demos"
version = "0.1.0"
authors = ["Andrew Brown <Andrew.Brown.UNL@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.30.0"
wasm-bindgen = "0.2.92"
env_logger = "0.11.3"
wasm-bindgen-futures = "0.4.42"
tracing = "0.1.40"
pollster = "0.3.0"
cga3d_min = { path = "../cga3d_min", features = ["include-wgsl-src"] }

# naga_oil limits the version of wgpu and naga we can use
naga_oil = { version = "0.13.0", features = ["prune"] }
naga = "0.19.2"
wgpu = { version = "0.19.4", features = ["naga-ir"] }
