[package]
name = "projective_ga"
version = "0.3.0"
authors = ["Alexander Meißner <AlexanderMeissner@gmx.net>", "Andrew Brown <Andrew.Brown.UNL@gmail.com>"]
description = "Generate(d) custom libraries for projective geometric algebras"
repository = "https://github.com/AndrewBrownK/projective_ga/"
keywords = ["math", "simd", "vector", "geometric-algebra", "geometry"]
license = "MIT"
edition = "2021"
publish = false
