[package]
name = "build_cga3d"
version = "0.3.0"
authors = ["Alexander Meißner <AlexanderMeissner@gmx.net>", "Andrew Brown <Andrew.Brown.UNL@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
codegen = { path = "../../codegen" }
async-trait = "0.1.80"

# for testing
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "io-std", "io-util", "sync", "signal", "fs", "parking_lot", "time"] }