[package]
name = "build_shader_automatically"
version = "0.1.0"
authors = ["Andrew Brown <Andrew.Brown.UNL@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# Build Phase: enable include-wgsl-src
cga3d_min = { path = "../../cga3d_min", features = ["include-wgsl-src"] }

[dependencies]
# Runtime: exclude include-wgsl-src
cga3d_min = { path = "../../cga3d_min" }
# Tell wgpu to allow spirv shader input, or whatever type of composed output you prefer
wgpu = { version = "0.19.4", features = ["spirv"] }

winit = "0.30.0"
wasm-bindgen = "0.2.92"
env_logger = "0.11.3"
wasm-bindgen-futures = "0.4.42"
tracing = "0.1.40"
pollster = "0.3.0"
