[package]
name = "rga3d"
version = "1.0.0"
authors = ["Andrew Brown <Andrew.Brown.UNL@gmail.com>", "Alexander Meißner <AlexanderMeissner@gmx.net>"]
description = "Latest generated test case"
repository = "https://github.com/AndrewBrownK/projective_ga/"
keywords = ["math", "simd", "vector", "geometric-algebra", "geometry"]
license = "MIT"
edition = "2021"

[features]
default = []
wgsl = []
glsl = []
sql = []
slang = []

[build-dependencies]
anyhow = "1.0.95"

[dependencies]
# naga_oil = { version =  "0.14.0", features = ["prune", "glsl"] }
# naga = "0.20.0"
# anyhow = "1.0.95"
bytemuck = { version = "1.16.3", features = ["derive"] }
encase = "0.9.0"
nearly = "0.4.0"
float-ord = "0.3.2"
serde = { version = "1.0.204", features = ["derive"] }
