[package]
name = "rga3d_old"
version = "0.3.0"
authors = ["Alexander Meißner <AlexanderMeissner@gmx.net>", "Andrew Brown <Andrew.Brown.UNL@gmail.com>"]
description = "Generate(d) custom libraries for geometric algebras"
repository = "https://github.com/AndrewBrownK/projective_ga/"
keywords = ["math", "simd", "vector", "geometric-algebra", "geometry"]
license = "MIT"
edition = "2021"
publish = false

[features]
default = []
wgsl-compose = []
glsl-compose = []


[dependencies]
projective_ga = { path = "../../projective_ga" }
naga_oil = { version =  "0.13.0", features = ["prune", "glsl"] }
naga = "0.19.2"
anyhow = "1.0.86"
bytemuck = "1.16.0"