[package]
name = "debug_glsl"
version = "0.1.0"
authors = ["Andrew Brown <Andrew.Brown.UNL@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
winit = "0.30.0"
pollster = "0.3.0"
cga3d_min = { path = "../../../old_libraries/cga3d_min", features = ["glsl-compose"] }

# naga_oil limits the version of wgpu and naga we can use
naga_oil = { version = "0.13.0", features = ["prune", "glsl"] }
naga = { version = "0.19.2" , features = ["glsl-out"]}
wgpu = { version = "0.19.4", features = ["glsl", "naga-ir"] }
bytemuck = "1.16.0"
