[package]
name = "hello_circle_wgsl_build"
version = "0.1.0"
authors = ["Andrew Brown <Andrew.Brown.UNL@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
# naga_oil limits the version of wgpu and naga we can use (TODO update versions)
cga3d = { path = "../../../libraries/cga3d", features = ["wgsl"] }
#naga_oil = { version = "0.16.0", features = ["prune"] }
#naga = { version = "23.1.0", features = ["spv-out"]}
bytemuck = "1.16.0"
anyhow = "1.0.81"
